--- a/docs/developer-guide/solvers/incompressible-solver.tex
+++ b/docs/developer-guide/solvers/incompressible-solver.tex
@@ -21,7 +21,7 @@ Immersed Boundary Methods may turn very useful in these situations, where the de
 The definition of this term depends on the method but, for the Smoothed Profile Method (SPM), is related to a \emph{shape function} $\Phi(\BM{x}, t)$ valued 0 in the fluid domain and 1 outside. It is usually defined as:
 
 \begin{equation} \label{spm:eq:mask}
-    \Phi(\BM{x}, t) = \frac{1}{2}\left[\tanh\left(\frac{d(\BM{x}, t)}{\xi}\right)+1\right],
+    \Phi(\BM{x}, t) = -\frac{1}{2}\left[\tanh\left(\frac{d(\BM{x}, t)}{\xi}\right)-1\right],
 \end{equation}
 
 \begin{figure}[htb]
@@ -122,7 +122,7 @@ In addition, somewhere in the \inltt{CONDITIONS} section this function must appe
 As a brief guideline, to define a cylinder of radius 1 and center at the point (0,0) according to expression \eqref{spm:eq:mask}, the \inltt{"Phi"} field in the \inltt{ShapeFunction} function should be:
 
 \begin{lstlisting}[style=XMLStyle]
-    <E VAR="Phi" USERDEFINEDTYPE="TimeDependent" VALUE="0.5*(tanh((rad(x,y)-1.0)/0.04)+1.0)" />
+    <E VAR="Phi" USERDEFINEDTYPE="TimeDependent" VALUE="-0.5*(tanh((rad(x,y)-1.0)/0.04)-1.0)" />
 \end{lstlisting}
 
 The line \inltt{<E VAR="Phi" ... />} indicates that the immersed bodies are defined by the function introduced in\inltt{VALUE}, while a line like the following:
