Added pdf image file for SPM section

--- a/docs/developer-guide/solvers/incompressible-solver.tex
+++ b/docs/developer-guide/solvers/incompressible-solver.tex
@@ -26,7 +26,7 @@ The definition of this term depends on the method but, for the Smoothed Profile 
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width=10cm]{./img/concentration.pdf}
+    \includegraphics[width=10cm]{img/concentration.pdf}
     \caption{Definition of the shape function $\Phi$ close to the boundary of an immersed body.}
     \label{spm:fig:shapefunc}
 \end{figure}
