--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -547,3 +547,35 @@ year = {2016}
     school = {Technische Universität Darmstadt},
     url    = {http://tuprints.ulb.tu-darmstadt.de/id/eprint/7611},
 }
+
+@article{jallepalli2019adaptive,
+  title={Adaptive characteristic length for L-SIAC filtering of FEM data},
+  author={Jallepalli, Ashok and Haimes, Robert and Kirby, Robert M},
+  journal={Journal of Scientific Computing},
+  volume={79},
+  number={1},
+  pages={542--563},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{jallepalli2019efficient,
+  title={Efficient Algorithms for the Line-SIAC Filter},
+  author={Jallepalli, Ashok and Kirby, Robert M},
+  journal={Journal of Scientific Computing},
+  pages={1--19},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{jallepalli2017treatment,
+  title={On the treatment of field quantities and elemental continuity in fem solutions},
+  author={Jallepalli, Ashok and Docampo-S{\'a}nchez, Julia and Ryan, Jennifer K and Haimes, Robert and Kirby, Robert M},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={24},
+  number={1},
+  pages={903--912},
+  year={2017},
+  publisher={IEEE}
+}
+
