--- a/docs/user-guide/xml/xml-filters.tex
+++ b/docs/user-guide/xml/xml-filters.tex
@@ -149,13 +149,13 @@ difference where $\Phi \neq 0$~\cite{LuoSPM}:
 
 \begin{equation*}
     \frac{\mathbf{F}^n}{\rho} = \frac{1}{\Delta t} \int_{\Omega}
-        \Phi^{n+1}(\mathbf{u^*} - \mathbf{u^n_p})~\text{d}x
+        \Phi^{n+1}(\mathbf{u^*} - \mathbf{u^n}_p)~\text{d}x
 \end{equation*}
 
 \begin{center}
   \begin{tabularx}{0.99\textwidth}{lllX}
     \toprule
-    \textbf{Option name} & \textbf{Required} & \textbf{Default} & 
+    \textbf{Option name} & \textbf{Required} & \textbf{Default} &
     \textbf{Description} \\
     \midrule
     \inltt{OutputFile}      & \xmark   & \inltt{session} &
